# Text-editor

./: CMakeLists.txt
include/: Command.hpp  DocumentAdapter.hpp  DocumentObserver.hpp  EditCommand.hpp  EditorState.hpp  FileFacade.hpp  FileHandler.hpp  FileProxy.hpp  MainWindow.hpp  SingletonWindow.hpp  TextDecorator.hpp  TextIterator.hpp
src/: Command.cpp  DocumentAdapter.cpp  DocumentObserver.cpp  EditCommand.cpp  EditorState.cpp  FileFacade.cpp  FileHandler.cpp  FileProxy.cpp  MainWindow.cpp  SingletonWindow.cpp  TextDecorator.cpp  TextIterator.cpp  main.cpp
tests/: CMakeLists.txt  DocumentAdapterTest.cpp  EditorStateTest.cpp
